<resources>
    <string name="app_name">‌Bamilo</string>
    <string name="userReview_submit_msg_succeed">با تشکر از نظر شما</string>
    <string name="userReview_submit_msg_failed">خطا در ثبت نظر!</string>
    <string name="sellersList_title">فروشندگان دیگر</string>
    <string name="decSpec_tab_description">توضیحات</string>
    <string name="decSpec_tab_specification">مشخصات</string>
    <string name="comment_title">نظرات کاربران</string>
    <string name="comment_header_rateSum">از %s</string>
    <string name="comment_header_commentsCount">%s نظر</string>
    <string name="comment_comment_hasUseBeenBoughtLabel">خریدار محصول</string>
    <string name="comment_comment_seeMore">بیشتر…</string>
    <string name="comment_comment_seeLess">کمتر…</string>
    <string name="comment_comment_likeCount">\u200f(%s)</string>
    <string name="comment_comment_dislikeCount">\u200f(%s)</string>
    <string name="comment_button_addComment">افزودن نظر</string>
    <string name="submitRate_title">افزودن نظر</string>
    <string name="submitRate_question">از پنج ستاره چند ستاره به این محصول می‌دهید؟</string>
    <string name="submitRate_rate">%s ستاره</string>
    <string name="submitRate_hint_title">عنوان</string>
    <string name="submitRate_hint_comment">نظر شما</string>
    <string name="submitRate_submitBtn">ثبت نظر</string>
    <string name="submitRate_selectStarError">لطفا به محصول امتیاز دهید.</string>
    <string name="submitRate_succeed">با تشکر. نظر شما پس از بررسی منتشر خواهد شد.</string>
    <string name="submitRate_submitError">نظر شما ثبت نشد!</string>
    <string name="suffix_currency">%s ریال</string>
    <string name="priceAndCurrency">%s %s</string>
    <string name="suffix_percent">%s %%</string>
    <string name="delivery_time">زمان ارسال</string>
    <string name="score">امتیاز</string>
    <string name="price">قیمت</string>
    <string name="sort_by_">مرتب‌سازی بر اساس:</string>
    <string name="format_discount_percentage">%1$d%%</string>
    <string name="account_name">My Account</string>
    <string name="checkout_confirmation">Checkout Confirmation</string>
    <string name="action_label_add_address">Add New Address</string>
    <string name="action_label_receiver">Receiver Information</string>
    <string name="action_label_basket">Basket</string>
    <string name="action_label_search_hint">Search on %1s</string>
    <string name="add_to_shopping_cart">Add to Cart</string>
    <string name="added_bundle_to_shop_cart_dialog_text">Products were added to shopping cart</string>
    <string name="added_to_shop_cart_dialog_text">Item was added to cart</string>
    <string name="bamilo_not_available">Bamilo is currently not available</string>
    <string name="billing_def_shipping_label">Default Shipping Address</string>
    <string name="address_shipping_billing_label">Shipping/Billing Address</string>
    <string name="address_shipping_label">Shipping Address</string>
    <string name="address_billing_label">Billing Address</string>
    <string name="address_others_label">Other Addresses</string>
    <string name="address_add_new_label">Add new billingAddress</string>
    <string name="buy_now">Buy Now</string>
    <string name="call_to_order">Call to order</string>
    <string name="campaign_ramaining_stock">Remaining Stock:</string>
    <string name="campaign_save">You Save</string>
    <string name="campaign_stock_alert">Sorry the item you have chosen is sold out.</string>
    <string name="campaigns_label">Campaigns</string>
    <string name="campaign_unavailable_title">This campaign is finished</string>
    <string name="campaign_unavailable_description">Even so, we have plenty of other great offers waiting for you.</string>
    <string name="campaign_offer_ended">Offer Ended!</string>
    <string name="campaign_timer_end">Ends in:</string>
    <string name="cancel_label">Cancel</string>
    <string name="cart_label">Cart</string>
    <string name="catalog_edit_filters">Edit Filters</string>
    <string name="catalog_no_results">No results match your filter criteria.</string>
    <string name="catalog_no_results_details">You can try to use less specific filters</string>
    <string name="checkout_button_text">Proceed to Checkout</string>
    <string name="checkout_header_step_1">Login</string>
    <string name="checkout_header_step_2">Address</string>
    <string name="checkout_header_step_3">Shipping</string>
    <string name="checkout_header_step_4">Payment</string>
    <string name="checkout_label">Checkout</string>
    <string name="close_app">Close App</string>
    <string name="confirm_order_loosing_order">If you go back again your order will be invalidated and you will be repositioned on the homepage. \nOrder number:</string>
    <string name="confirm_order_loosing_order_title">Warning:</string>
    <string name="continue_shopping">ادامه خرید</string>
    <string name="create_addresses_success">Created addresses successfully.</string>
    <string name="done_label">Done</string>
    <string name="dynamic_errortext"> is not correct</string>
    <string name="edit_address">Edit Address</string>
    <string name="edit_address_success">Edited billingAddress successfully.</string>
    <string name="error_add_to_shopping_cart">This product could not be added to the shopping cart. Please try again later.</string>
    <string name="error_fb_permission_not_granted">Sorry, we need your email to login/create your account.</string>
    <string name="error_forgotpassword_title">Password recovery failed</string>
    <string name="error_ismandatory">Please fill in the</string>
    <string name="error_login_title">Login failed</string>
    <string name="error_no_connection">No connection</string>
    <string name="error_occured">Sorry, an error occurred.</string>
    <string name="error_please_try_again">We have encountered a small problem fetching the data. Please try again.</string>
    <string name="error_problem_fetching_data">Problem fetching data</string>
    <string name="exit_press_back_again">Please press back again if you wish to leave the app</string>
    <string name="extra_costs">Extra Costs:</string>
    <string name="extra_costs_label">Extra Costs</string>
    <string name="fallback_audio">Audio &amp; Video</string>
    <string name="fallback_best">best online shopping experience</string>
    <string name="fallback_books">Books</string>
    <string name="fallback_bottom_text">from anywhere, anytime</string>
    <string name="fallback_bottom_text2">And much more for you to browse or shop</string>
    <string name="fallback_choice">THE WIDEST CHOICE</string>
    <string name="fallback_doorstep">AT YOUR DOORSTEP</string>
    <string name="fallback_fashion">Fashion</string>
    <string name="fallback_health">Health &amp; Beauty</string>
    <string name="fallback_home_office">Home &amp; Office</string>
    <string name="fallback_maintenance">MAINTENANCE</string>
    <string name="fallback_maintenance_text">is currently in maintenance.</string>
    <string name="fallback_maintenance_text_bottom">We will try to be brief, you can try again later</string>
    <string name="fallback_mobile">Mobile Phones</string>
    <string name="fallback_welcome">WELCOME TO</string>
    <string name="fgt_pass">Forgot Password?</string>
    <string name="filters_label">Filters</string>
    <string name="forgotpass_header">Password Recovery</string>
    <string name="forgotten_password">Please type in your email.</string>
    <string name="forgotten_password_examplemail">john.doe@example.com</string>
    <string name="forgotten_password_sub_text">We will send you a link to change the password.</string>
    <string name="forgotten_password_successtext">Email sent</string>
    <string name="form_passwordsnomatch">Passwords do not match</string>
    <string name="form_texttolong"> text is too long</string>
    <string name="form_texttoshort"> text is too short</string>
    <string name="form_textmaxlen">Max length is %d</string>
    <string name="form_textminlen">Min length is %d</string>
    <string name="free_label">Free</string>
    <string name="got_it">Got it</string>
    <string name="home_label">Home</string>
    <string name="internet_no_connection_details_label">An internet error occurred, please try again</string>
    <string name="loading_message">Loading&#8230;</string>
    <string name="loading_more">Loading more items&#8230;</string>
    <string name="login_label">Login</string>
    <string name="logout_text_question">Are you sure you want to exit?</string>
    <string name="logout_title">Logout Confirmation</string>
    <string name="menu_label_uppercase">MENU</string>
    <string name="my_account">My Account</string>
    <string name="my_order_confirm_button">Confirm Order</string>
    <string name="my_order_coupon_label">Coupon</string>
    <string name="my_order_details_label">جزییات سفارش</string>
    <string name="my_order_history_label">My Order History</string>
    <string name="my_order_is_same">Billing to same billingAddress</string>
    <string name="my_order_label">My Order</string>
    <string name="my_order_payment">Payment Options</string>
    <string name="my_order_total_label">Total</string>
    <string name="my_order_voucher_label">Voucher</string>
    <string name="my_orders_label">My Orders</string>
    <string name="my_profile">My Profile</string>
    <string name="myaccount_userdata">Profile</string>
    <string name="nav_country">Choose Country</string>
    <string name="new_arrival_badge">New</string>
    <string name="newsletter_label">Newsletter</string>
    <string name="next_button">Next</string>
    <string name="no_internet_access_warning_title">No Internet Access!</string>
    <string name="no_label">No</string>
    <string name="notifications">Push Notifications</string>
    <string name="off_label">OFF</string>
    <string name="ok_label">OK</string>
    <string name="or_text">OR</string>
    <string name="order_no_items">You have no items in the cart</string>
    <string name="order_status_label">Order Status</string>
    <string name="order_success">سفارش شما با موفقیت ثبت شد.</string>
    <string name="order_summary_label">Order Summary</string>
    <string name="order_summary_shipping_fee_label">Shipping Fee:</string>
    <string name="order_summary_shipping_method">Shipping Method</string>
    <string name="order_summary_subtotal_label">Subtotal:</string>
    <string name="order_summary_total_label">Total:</string>
    <string name="order_track_products">Products:</string>
    <string name="other_sellers">Other Sellers</string>
    <string name="other_sellers_foroshandegan">سایر فروشندگان</string>
    <string name="password_changed">Password changed with success</string>
    <string name="payment">Payment</string>
    <string name="personal_data_label">Your Personal Data</string>
    <string name="pickup_station_address">&lt;b>Address:&lt;/b> %s</string>
    <string name="pickup_station_city">&lt;b>City:&lt;/b> %s</string>
    <string name="pickup_station_opening_hours">&lt;b>Opening Hours:&lt;/b> %s</string>
    <string name="shipping_fee">&lt;b>Shipping Fee:&lt;/b> %s</string>
    <string name="search_label">Search</string>
    <string name="bamilo_bold_font" translatable="false">bamilo_sans_bold</string>
    <string name="delivery_neighbourhood">Neighbourhood</string>
    <string name="register_label">Register</string>
    <string name="national_id">National code</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email">Email</string>
    <string name="new_password">New password</string>
    <string name="phone">Phone</string>
    <string name="verification_token_receive_notice">کد تایید را دریافت نکردید؟</string>
    <string name="verifyPhoneNoScreen_title">کد بازیابی را ارسال کنید</string>
    <string name="verifyPhoneNoScreen_btn_resend">ارسال مجدد کد</string>
    <string name="verifyPhoneNoScreen_btn_next">مرحله بعد</string>
</resources>