<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="@dimen/dimen_16dp"
        android:paddingLeft="@dimen/dimen_16dp"
        android:paddingRight="@dimen/dimen_16dp"
        android:paddingTop="@dimen/dimen_16dp">

        <com.bamilo.android.framework.components.customfontviews.EditText
            android:id="@+id/first_name"
            style="@style/Register_Edittext"
            android:hint="@string/first_name"
            android:inputType="text" />

        <com.bamilo.android.appmodule.modernbamilo.customview.XeiTextView
            android:id="@+id/first_name_error_message"
            style="@style/FormTextErrorField"
            android:gravity="start|left"
            android:visibility="gone" />

        <com.bamilo.android.framework.components.customfontviews.EditText
            android:id="@+id/last_name"
            style="@style/Register_Edittext"
            android:hint="@string/last_name"
            android:inputType="text" />

        <com.bamilo.android.appmodule.modernbamilo.customview.XeiTextView
            android:id="@+id/last_name_error_message"
            style="@style/FormTextErrorField"
            android:gravity="start|left"
            android:visibility="gone" />

        <com.bamilo.android.framework.components.customfontviews.EditText
            android:id="@+id/national_id"
            style="@style/Register_Edittext"
            android:hint="@string/national_id"
            android:inputType="number" />

        <com.bamilo.android.appmodule.modernbamilo.customview.XeiTextView
            android:id="@+id/national_id_error_message"
            style="@style/FormTextErrorField"
            android:gravity="start|left"
            android:visibility="gone" />

        <Spinner
            android:id="@+id/gender"
            style="@style/CustomSpinnerStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="@dimen/dimen_50dp"
            android:prompt="@string/delivery_neighbourhood"
            android:spinnerMode="dropdown"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <com.bamilo.android.appmodule.modernbamilo.customview.XeiTextView
            android:id="@+id/gender_error_message"
            style="@style/FormTextErrorField"
            android:gravity="start|left"
            android:visibility="gone" />

        <com.bamilo.android.framework.components.customfontviews.EditText
            android:id="@+id/email"
            style="@style/Register_Edittext"
            android:hint="@string/email"
            android:inputType="textEmailAddress" />

        <com.bamilo.android.appmodule.modernbamilo.customview.XeiTextView
            android:id="@+id/email_error_message"
            style="@style/FormTextErrorField"
            android:gravity="start|left"
            android:visibility="gone" />

        <com.bamilo.android.framework.components.customfontviews.EditText
            android:id="@+id/password"
            style="@style/Register_Edittext"
            android:gravity="right"
            android:hint="@string/new_password"
            android:inputType="textPassword" />

        <com.bamilo.android.appmodule.modernbamilo.customview.XeiTextView
            android:id="@+id/password_error_message"
            style="@style/FormTextErrorField"
            android:gravity="start|left"
            android:visibility="gone" />

        <com.bamilo.android.framework.components.customfontviews.EditText
            android:id="@+id/phone"
            style="@style/Register_Edittext"
            android:hint="@string/phone"
            android:inputType="phone" />

        <com.bamilo.android.appmodule.modernbamilo.customview.XeiTextView
            android:id="@+id/phone_error_message"
            style="@style/FormTextErrorField"
            android:gravity="start|left"
            android:visibility="gone" />

        <com.bamilo.android.appmodule.modernbamilo.customview.XeiTextView
            android:id="@+id/register_button_create"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_10dp"
            android:background="@color/button_primary_color"
            android:text="@string/register_label"
            android:textColor="@color/white" />

    </LinearLayout>

</ScrollView>