<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_maintenance"
    android:descendantFocusability="afterDescendants" >

    <LinearLayout
        android:id="@+id/fallback_title_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="19.8dp"
        android:orientation="vertical" >

        <com.bamilo.android.appmodule.modernbamilo.customview.XeiTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:text="@string/fallback_welcome"
            android:textColor="#ffffff"
            android:textSize="18.48sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginTop="6.6dp"
            android:background="#ffffff" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/fallback_country_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/fallback_title_container"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="13.2dp"
        android:orientation="horizontal" >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/img_maintenance_logo" />

        <com.bamilo.android.appmodule.modernbamilo.customview.XeiTextView
            android:id="@+id/fallback_country"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="13.2dp"
            android:layout_marginTop="-3dp"
            android:fontFamily="@string/bamilo_bold_font"
            android:gravity="center"
            android:textColor="#000000"
            android:textSize="29.04sp"
            android:visibility="gone" />

        <LinearLayout
            android:id="@+id/fallback_country_double"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="13.2dp"
            android:gravity="center|left"
            android:orientation="vertical"
            android:visibility="gone" >

            <com.bamilo.android.appmodule.modernbamilo.customview.XeiTextView
                android:id="@+id/fallback_country_top"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@string/bamilo_bold_font"
                android:gravity="left"
                android:textColor="#000000"
                android:textSize="17.14sp" />

            <com.bamilo.android.appmodule.modernbamilo.customview.XeiTextView
                android:id="@+id/fallback_country_bottom"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="-10dp"
                android:fontFamily="@string/bamilo_bold_font"
                android:gravity="left"
                android:textColor="#000000"
                android:textSize="17.14sp" />
        </LinearLayout>
    </LinearLayout>

    <com.bamilo.android.appmodule.modernbamilo.customview.XeiTextView
        android:id="@+id/fallback_best"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/fallback_country_container"
        android:layout_marginTop="10.56dp"
        android:ellipsize="marquee"
        android:gravity="center_horizontal"
        android:singleLine="true"
        android:text="@string/fallback_best"
        android:textColor="#000000"
        android:textSize="15.84sp" />

    <LinearLayout
        android:id="@+id/fallback_choice_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/fallback_best"
        android:gravity="center_horizontal"
        android:orientation="horizontal" >

        <com.bamilo.android.appmodule.modernbamilo.customview.XeiTextView
            android:id="@+id/fallback_choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@string/bamilo_bold_font"
            android:text="@string/fallback_choice"
            android:textColor="#ffffff"
            android:textSize="9.9sp" />

        <com.bamilo.android.appmodule.modernbamilo.customview.XeiTextView
            android:id="@+id/fallback_doorstep"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:text="@string/fallback_doorstep"
            android:textColor="#000000"
            android:textSize="9.9sp" />
    </LinearLayout>

    <com.bamilo.android.appmodule.modernbamilo.customview.XeiTextView
        android:id="@+id/fallback_bottom_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="13.2dp"
        android:fontFamily="@string/bamilo_bold_font"
        android:gravity="center_horizontal"
        android:text="@string/fallback_bottom_text"
        android:textColor="#ffffff"
        android:textSize="13.2sp" />

    <com.bamilo.android.appmodule.modernbamilo.customview.XeiTextView
        android:id="@+id/fallback_bottom_text2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/fallback_bottom_text"
        android:gravity="center_horizontal"
        android:text="@string/fallback_bottom_text2"
        android:textColor="#ffffff"
        android:textSize="11.88sp" />

    <LinearLayout
        android:id="@+id/fallback_options_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/fallback_bottom_text2"
        android:layout_marginBottom="26.4dp"
        android:layout_marginLeft="26.4dp"
        android:orientation="horizontal"
        android:weightSum="2"
        android:baselineAligned="false">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/img_tickfallback" />

                <com.bamilo.android.appmodule.modernbamilo.customview.XeiTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="6.6dp"
                    android:text="@string/fallback_fashion"
                    android:textColor="#000000"
                    android:textSize="13.2sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/img_tickfallback" />

                <com.bamilo.android.appmodule.modernbamilo.customview.XeiTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="6.6dp"
                    android:text="@string/fallback_mobile"
                    android:textColor="#000000"
                    android:textSize="13.2sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="13.2dp"
                    android:src="@drawable/img_tickfallback" />

                <com.bamilo.android.appmodule.modernbamilo.customview.XeiTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="6.6dp"
                    android:text="@string/fallback_home_office"
                    android:textColor="#000000"
                    android:textSize="13.2sp" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="13.2dp"
                    android:src="@drawable/img_tickfallback" />

                <com.bamilo.android.appmodule.modernbamilo.customview.XeiTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="6.6dp"
                    android:text="@string/fallback_health"
                    android:textColor="#000000"
                    android:textSize="13.2sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="13.2dp"
                    android:src="@drawable/img_tickfallback" />

                <com.bamilo.android.appmodule.modernbamilo.customview.XeiTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="6.6dp"
                    android:text="@string/fallback_audio"
                    android:textColor="#000000"
                    android:textSize="13.2sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="13.2dp"
                    android:src="@drawable/img_tickfallback" />

                <com.bamilo.android.appmodule.modernbamilo.customview.XeiTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="6.6dp"
                    android:text="@string/fallback_books"
                    android:textColor="#000000"
                    android:textSize="13.2sp" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <ImageView
        android:id="@+id/home_fallback_country_map"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/fallback_options_container"
        android:layout_below="@id/fallback_choice_container"
        android:layout_centerHorizontal="true"
        android:src="@drawable/img_maintenance_map" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/fallback_options_container"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="6.6dp"
        android:src="@drawable/img_arrowfallback" />

</RelativeLayout>